<resources>
    <string name="app_name">BabbleChat</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="icon_image_description">App Icon Image</string>
    <string name="login">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SIGN UP</string>
    <string name="enter_correct_email">Enter Correct Email</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="user_created_success">User Created successfully</string>
    <string name="user_signup_failed">Signup Failed + %1$s</string>
    <string name="dont_have_account">Do not have a account?</string>
    <string name="failed_profile_update">Failed to update profile %1$s</string>
    <string name="access_permission_required">Access permission is required</string>
    <string name="save">Save</string>
    <string name="change_pic">Change Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="photo_removed_succesfully">Photo removed successfully</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change Password</string>
    <string name="password_change_successfully">Password change successfully</string>
    <string name="something_went_wrong">Something went wrong : %1$s</string>
    <string name="reset_password_instruction">Reset password intruction has been sent on email %1$s</string>
    <string name="retry">Retry</string>
    <string name="close">Close</string>
    <string name="failed_send_email">Failed to send email : %1$s</string>
    <string name="resend_timer">Resend in : %1$s</string>
    <string name="loading">Please wait...</string>
    <string name="no_internet">Check Intenet Connection</string>
    <string name="chat">Chat</string>
    <string name="requests">Requests</string>
    <string name="find">FInd</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_chat_list">Chat list will appear here</string>
    <string name="empty_friend_list">Friends list will appear here</string>
    <string name="empty_requests_list">Friend Requests will appear here</string>
    <string name="back_to_exit">Press back again to exit</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="failed_to_fetch_friends">Failed to fetch friends : %1$s</string>
    <string name="request_sent_successful">Request Sent Successfully</string>
    <string name="request_send_failed">Failed to send request : %1$s</string>
    <string name="request_cancelled_successful">Request Cancelled Successfully</string>
    <string name="request_cancel_failed">Request Cancel Failed : %1$s</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="failed_to_fetch_friend_request">Failed to fetch friend request : %1$s</string>
    <string name="failed_to_deny_request">Failed to deny request : %1$s</string>
    <string name="failed_to_accept_friend_Request">Failed to accept freind request : %1$s</string>
    <string name="failed_to_fetch_chat_list">Failed to fetch chat list : %1$s</string>
    <string name="enter_message">Enter Message</string>
    <string name="failed_send_message">Failed to send message + %1$s</string>
    <string name="message_sent_successfully">Message sent successfully</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="permission_required_to_access">Permission Required to access files</string>
    <string name="upload_progress">Uploading %1$s (%2$s %%)</string>
    <string name="failed_to_upload">Failed to upload : %1$s</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="message_deleted_successfully">Message deleted successfully</string>
    <string name="failed_to_delete_file">Failed to delete file %1$ss</string>
    <string name="failed_to_delete_message">Failed to delete message : %1$s</string>
    <string name="download_progress">Downloading %1$s (%2$s %%)</string>
    <string name="share_with">Share with...</string>
    <string name="file_downloaded_successfully">File downloaded Successfully</string>
    <string name="view">View</string>
    <string name="failed_to_download">Failed to download : %1$ss</string>
    <string name="failed_to_store_file">Failed to store file</string>
    <string name="failed_to_fetch_friend_list">Failed to fetch friend list : %1$s</string>
    <string name="failed_to_send_message">Failed to send message : %1$s</string>
    <string name="failed_to_save_device_token">Failed to save device token</string>
    <string name="failed_to_send_notification">Failed to send notification : %1$s</string>
    <string name="request_denied_successfully">Request denied succesfully</string>
</resources>