<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuForward"
        android:icon="@drawable/ic_forward"
        android:title="@string/forward"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuDownload"
        android:icon="@drawable/ic_baseline_cloud_download_24"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
</menu>